# technical-test-buawei

./: README.md
data-engineer/: README.md  coco_format.json  continous_ingestion.py  pyproject.toml  requirements.txt  voc2coco.py
data-engineer/annotation_server/: __main__.py
data-engineer/data_provider/: __main__.py  runner.py
data-engineer/images/12723040-1b7c-490a-811a-c1911093bc2c/: 3f08b1a8-16e4-435e-8ee7-b1a6b050117d.xml  429de516-35cf-4ac9-a604-61e7c09880d4.xml  4f348e6c-2703-4bf1-82f1-3f01f66634d1.xml  5b82d96f-195a-4bee-be56-3e6a23e6ee4f.xml  6aebf182-5878-4c5b-8da6-034c5e202d35.xml  733d2a7a-ac4d-40e2-8398-51a5c7614c57.xml  869136eb-1feb-4286-ac97-20412cc4bb14.xml  898e5002-fa53-4017-91cc-be2056e7eb0a.xml
data-engineer/images/465ef8d5-0195-4a99-9e3a-153af885d89c/: 145f8dc6-7ae8-470e-87c9-d24b567ecdd4.xml  4a4ab476-b5cf-4f00-ae7b-a8715211087c.xml  577c90b0-c237-4b95-88b8-afb3eecdfdab.xml  7335b752-2179-4d51-a825-8be26c4b3fd8.xml  7b4cafdb-ed8a-4377-9272-962572ed9767.xml  996dc04d-18d0-4324-ada1-e09a1e2dc647.xml  bdcf2814-0173-483d-ad0f-4fa88f48c13f.xml  df4d5295-553f-4ef9-a0ca-60492f5aacbb.xml  e04e5d0b-5d11-45a5-9151-8910ef5c1476.xml  f1dc00ca-19f9-45f8-b77c-b2344582efa0.xml
mlops-engineer/: .env  .gitignore  README.md  image_64.json  metrics.csv  new_model_version.py  pyproject.toml  register_model.py  requirements.txt  test.py  test_inference_server.py  test_new_model_version.py
mlops-engineer/inference_server/: __main__.py  config.py
mlops-engineer/models/: model_05.onnx  model_08.onnx  model_10.onnx
(+64 files in other folders)
